add responsive settings

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="card">
       <h1>🌸 Happy Birthday, Alison! 🌸</h1>
-      <div class="typing">Celebrating the beautiful soul you are...</div>
+      <div class="typing">Celebrating The Beautiful Soul You Are...</div>
       <p>Your smile lights up every room. Today, the world smiles back just for You!</p>
       <button id="celebrateButton">Send a Hug 🤗</button>
     </div>
