updated responsive settings

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 
     <div class="card">
       <h1>🌸 Happy Birthday, Alison! 🌸</h1>
-      <div class="typing">Celebrating The Beautiful Soul You Are...</div>
+      <div class="typing">
+        <h2>Celebrating The Beautiful Soul You Are...</h2>
+      </div>
       <p>Your smile lights up every room. Today, the world smiles back just for You!</p>
-      <button id="celebrateButton">Send a Hug 🤗</button>
+      <button id="celebrateButton">Receive Our Hug 🤗</button>
     </div>
 
     <script src="script.js"></script>
